feat: add file support for media files